--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint",
     "db:generate": "drizzle-kit generate:pg",
     "db:studio": "drizzle-kit studio",
-
-    "db:migrate": "tsx lib/db/migrate.ts",
+    "db:migrate": "tsx src/lib/db/migrate.ts",
     "db:push": "drizzle-kit push:pg",
-    "db:seed": "tsx lib/db/seed.ts",
-    "db:reset": "tsx lib/db/reset.ts"
+    "db:seed": "tsx src/lib/db/seed.ts",
+    "db:reset": "tsx src/lib/db/reset.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
@@ -21,7 +20,6 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
@@ -30,6 +28,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "recharts": "^3.1.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
@@ -38,11 +40,17 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
